...
            Row(
                modifier = Modifier.fillMaxWidth(),
                horizontalArrangement = Arrangement.SpaceBetween
            ) {
                Icon(
                    imageVector = Icons.Default.ArrowBack,
                    contentDescription = "Back",
                    modifier = Modifier
                        .shadow(elevation = 4.dp)
                        .padding(16.dp)
                        .clickable { onBackClick() },
                )
                Icon(
...
